clang/test/BSC/Positive/Trait/r1/definition_3/definition_3.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

trait F {
  int foo(This* this);
};

int get(trait F* f) {
  return 1;
};

int int::foo(int* this) {
  return 0;
}

impl trait F for int;

int main() {
  int a = 1;
  int b = get(&a);
  return 0;
}
